# stories

./: .coveragerc  .cruft.json  .editorconfig  .flake8  .gitignore  .importlinter  .pre-commit-config.yaml  .python-version  .travis.yml  404.html  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  dangerfile.ts  examples.py  index.html  mkdocs.yml  mypy.ini  package.json  pyproject.toml  pytest.ini  release.config.js  requirements.txt  setup.cfg  setup.py  sitemap.xml  stories.py  test_stories.py  test_userstories.py  tests.py  tox.ini  userstories.py
actor/: index.html
changelog/: index.html
composition/: index.html
contrib_debug_toolbars/: index.html
contrib_pytest/: index.html
contrib_sentry/: index.html
debugging/: index.html
definition/: index.html
docs/: Makefile  actor.md  call.rst  changelog.md  changelog.rst  composition.md  composition.rst  conf.py  contrib_debug_toolbars.md  contrib_pytest.md  contrib_sentry.md  debugging.md  debugging.rst  definition.md  definition.rst  development.md  execution.md  execution.rst  failure_protocol.md  failure_protocol.rst  faq.md  faq.rst  index.md  index.rst  inheritance.md  initiate.md  installation.md  reference.md  run.rst  state.md  story.md  transactions.md  usage.md  usage.rst  why.md  why.rst
examples/: purchase.py  transactions_step.py
execution/: index.html
failure_protocol/: index.html
faq/: index.html
initiate/: index.html
installation/: index.html
scripts/: check  install  release  review
search/: search_index.json
state/: index.html
stories/: __init__.py  _api.py  _base.py  _collect.py  _context.py  _history.py  _marker.py  _proxy.py  _repr.py  _return.py  _run.py  _summary.py  _wrapper.py  exceptions.py
story/: index.html
testing/: mddoctest.py  validators.py
tests/: conftest.py  test_actors.py  test_argument.py  test_arguments.py  test_base.py  test_configuration.py  test_context.py  test_contract.py  test_contrib_debug_toolbar_django.py  test_contrib_debug_toolbar_flask.py  test_contrib_sentry.py  test_execute.py  test_failure_reasons.py  test_initiate.py  test_representation.py  test_return.py  test_shortcuts.py  test_stories.py  test_story.py  (+2 more)
tests/helpers/: configuration.py  examples.py  helpers.py  mddoctest.py  pyproject.toml  setup.py  validators.py
tests/helpers/aioapp/: db.py  repositories.py  services.py
tests/helpers/app/: apps.py  db.py  entities.py  filters.py  messages.py  models.py  permissions.py  repositories.py  services.py  settings.py  tools.py  transactions.py
tests/helpers/django_project/: entities.py  filters.py  models.py  permissions.py  repositories.py  serializers.py  services.py  settings.py
tests/helpers/django_project/fixtures/: examples.yaml
tests/helpers/django_project/migrations/: 0001_initial.py
tests/helpers/examples/: __init__.py  context.py  context_contract_cerberus.py  context_contract_marshmallow.py  context_contract_pydantic.py  context_contract_raw.py  contract.py  contract_cerberus.py  contract_marshmallow.py  contract_pydantic.py  contract_raw.py  failure_reasons.py  methods.py  runners.py  shortcuts.py
tests/helpers/examples/context/: __init__.py  coroutines.py  functions.py
tests/helpers/examples/contract/: __init__.py  coroutines.py  functions.py
tests/helpers/examples/contract/cerberus/: __init__.py  coroutines.py  functions.py
tests/helpers/examples/contract/common/: coroutines.py  functions.py
tests/helpers/examples/contract/marshmallow/: __init__.py  coroutines.py  functions.py
tests/helpers/examples/contract/marshmallow2/: __init__.py  coroutines.py  functions.py
tests/helpers/examples/contract/marshmallow3/: __init__.py  coroutines.py  functions.py
tests/helpers/examples/contract/pydantic/: __init__.py  coroutines.py  functions.py
tests/helpers/examples/contract/raw/: __init__.py  coroutines.py  functions.py
tests/helpers/examples/failure_reasons/: __init__.py  coroutines.py  functions.py
tests/helpers/examples/methods/: __init__.py  coroutines.py  functions.py
(+166 files in other folders)
