[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry"]

[tool.poetry]
authors = ["Artem Malyshev <proofit404@gmail.com>"]
classifiers = [
    "Python :: Implementation :: CPython",
    "Python :: Implementation :: PyPy",
]
description = "Define a user story in the business transaction DSL"
documentation = "https://proofit404.github.io/stories/"
homepage = "https://pypi.org/project/stories/"
license = "BSD-2-Clause"
name = "stories"
packages = [
    { include = "_stories", from = "src" },
    { include = "stories", from = "src" },
]
readme = "docs/index.md"
repository = "https://github.com/proofit404/stories/"
version = "4.0.0"

[tool.poetry.dependencies]
python = "~3.6 || ~3.7 || ~3.8 || ~3.9"

[tool.poetry.plugins.pytest11]
stories = "stories.contrib.pytest"

[tool.poetry.urls]
Changelog = "https://proofit404.github.io/stories/changelog/"
Issues = "https://github.com/proofit404/stories/issues"
