[tool.poetry]
name = "helpers"
version = "0"
authors = []
packages = [
    { include = "examples" },
    { include = "helpers.py" },
    { include = "mddoctest.py"},
    { include = "app" }
]

[tool.poetry.scripts]
mddoctest = "mddoctest:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
