[tool.poetry]
name = "helpers"
version = "0"
description = ""
authors = []
packages = [
    { include = "django_project" },
    { include = "examples" },
    { include = "helpers.py" },
    { include = "mddoctest.py"},
]

[tool.poetry.scripts]
mddoctest = "mddoctest:main"

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
