[tool.poetry]
name = "helpers"
version = "0"
description = ""
authors = []
packages = [
    { include = "aioapp" },
    { include = "app" },
    { include = "examples" },
    { include = "helpers.py" },
    { include = "mddoctest.py"},
]

[build-system]
requires = ["poetry"]
build-backend = "poetry.masonry.api"
